use `scrollbar-gutter` to prevent layout shit - doesn't work for safari https://caniuse.com/mdn-css_properties_scrollbar-gutter

--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,8 @@ h6 {
   display: flex;
   flex-direction: column;
   height: 100%;
+  overflow: auto;
+  scrollbar-gutter: stable;
 }
 
 /* Base styles */
